--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,10 +15,10 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
-spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
+# spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
+# spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
 
-spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
-spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+# spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+# spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 
 logging.level.org.springframework.security=DEBUG
