--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,9 +8,13 @@ server.port=${PORT:8080}
 server.servlet.session.cookie.same-site=None
 server.servlet.session.cookie.secure=true
 
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+# spring.datasource.url=${SPRING_DATASOURCE_URL}
+# spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+# spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
+spring.datasource.url=jdbc:mysql://crossover.proxy.rlwy.net:27394/railway
+spring.datasource.username=root
+spring.datasource.password=jtvpofBCIaYjURrRIZYnRBYZBgjbVPrt
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
