--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
         "react-router-dom": "^6.30.3",
+        "rsuite": "^6.1.2",
         "serve": "^14.2.5"
     },
     "devDependencies": {
